Profile card fix on mobile

--- a/static/style.css
+++ b/static/style.css
@@ -711,7 +711,9 @@ hr:after {
   .navbar-nav .smintlink {
     text-align: center;
   }
-
+  .profile {
+    display: block;
+  }
 }
 
 /* max: 1199px Mobile Breakpoint */
